	* il_nvidia.cpp: Added ilNVidiaCompressDXTFile and Depth parameter to ilNVidiaCompressDXT.

2009-01-08 Matěj Týč <bubla@sf.net>
	* TODO: Added some tasks that I would like to undertake
	* ChangeLog, NEWS: Copied old ChangeLog entries to NEWS file
	* lib/Makefile.am: Added two new files to the list of IL sources
	(il_sun.c, il_nvidia.cpp)
	* examples/iller: Made empty files where the ILU frontend will be in
	the future.
	* configure.ac, m4/devil-reports.m4: Put the report stage of the
	configure script to a separate m4 file.

2009-01-09 Denton Woods <doomwiz@users.sf.net>
	* ilut_opengl.h: Moved ILGLCOMPRESSEDTEXIMAGE2DARBPROC typedef out of #ifdefs.
	* ilut_opengl.c: Added ilutGLSetTex2D and ilutGLSetTex3D.  Changed ilutGLSetTex to
	just call ilutGLSetTex2D.  Did the same thing for ilutGLSubTex.  Added checks for 
	volume image extensions.  Renamed MakeGLCompliant to MakeGLCompliant2D.  Added
	MakeGLCompliant3D.
	* ilut_opengl.c (ilutGLScreen): Added check for ilTexImage failing.
	* il_vtf.c (iLoadVtfInternal): Added BGRA4444 support.
	* il_alloc.c / ilu_scale.c: Cleaned up formatting some.
	* devil_internal_exports.h: Added Faces member to ILimage.
	* il_devil.c (iCopySubImages): Added support for faces.
	* il_register.c: Added ilRegisterNumFaces.
	* il_convert.c (ilFixImage): Added support for faces.
	* il_stack.c: Added ilActiveFace.
	* ilut_directx9:63,779: Added ILboolean typecast.
	* ilut_win32:102: Added ILboolean typecast.
	* il_jpeg.c:987: Commented out pragma warning at the end.
	* il_mng.c: Added #pragma warning at the top to get rid of redefinition warning when compiling.
	* il_nvidia.cpp (ilNVidiaCompressDXT): Added check for Data being NULL.
	* ilut_win32.c (ilutConvertSliceToHBitmap): Fixed bug #2496509 - added line 117 and
	added DataSize member.
	* il_hdr.c (iGetHdrHead): Fixed bug #2496518 - Added check for count.  Changed
	sscanf to use %2s format specifier to prevent buffer overruns in x and y.